# term_chess

./: .gitignore
lib/: .position.ml  ChessSymbols.ml  board.ml  classic_pieces.ml  core.ml  dune  piece.ml  piece_type.ml  piece_type.mli  piece_type_manager.mli  pieces.ml  position.ml  position.mli  renderer.ml
test/: dune
